fix(component): aligning icon and text in copy to clipboard tooltip

--- a/packages/genesys-spark-components/src/components/beta/gux-copy-to-clipboard/gux-copy-to-clipboard.less
+++ b/packages/genesys-spark-components/src/components/beta/gux-copy-to-clipboard/gux-copy-to-clipboard.less
@@ -43,10 +43,15 @@ button {
     display: inline-flex;
     align-items: center;
 
+    &.tooltip-text {
+      vertical-align: middle;
+    }
+
     gux-icon {
       width: 16px;
       height: 16px;
       padding-right: @gux-spacing-xs;
+      vertical-align: middle;
 
       &[icon-name='badge-check'] {
         color: @gux-alert-green-60;
